--- a/speed-limit-frontend/src/App.css
+++ b/speed-limit-frontend/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  display: flex;
   text-align: center;
 }
 
@@ -35,4 +36,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.leaflet-container {
+  width: 100vw;
+  height: 100vh;
 }
